resources/sass/layout/_header.scss
.header-wrapper {
    background: $turq;
    text-align: center;
    @include media-breakpoint-down(md) {
        padding: 10px 0;
    }
}

//HEADER SECTION
.branding {
    display: flex;
    justify-content: space-between;
}

.header-logo-parent {
    display: flex;
    align-items: center;

    a {
        display: flex;

        &:hover {
            text-decoration: none;
        }
    }
}


.main-nav {
    @include media-breakpoint-down(md) {
        position: fixed;
        top: 54px;
        left: 0;
        width: calc(100% - 2rem);
        height: calc(100vh - 54px);
        background-color: #fff;
        z-index: 2000;
        transform: translate3d(-100%, 0, 0);
        transition: $transition;
        box-shadow: $box-shadow;

        .main-menu {
            display: flex;
            flex-direction: column;
            padding-left: 1rem;

            li {
                display: inline-block;
                border-bottom: 2px solid $borderGrey;
                position: relative;

                svg {
                    @include v-c;
                    right: 1rem;
                }

                a {
                    color: $body-color;
                    padding: 1rem 0;
                }
            }
        }
    }

    @include media-breakpoint-up(lg) {
        display: flex;
    }

    .main-menu {
        margin: 0;

        li {
            position: relative;
            display: inline-block;


            > a {
                height: 100%;
                display: flex;
                align-items: center;

                transition: $transition;

                &.active {
                    background-color: darken($turq, 5%);
                    color: #fff;

                    svg {
                        path {
                            fill: #fff;
                        }
                    }
                }
            }

            &:hover {
                svg {
                    path {
                        fill: #fff;
                    }
                }

                a {
                    background-color: darken($turq, 5%);
                    text-decoration: none;
                    color: #fff;
                }
            }
        }

        @include media-breakpoint-up(lg) {
            li {
                &:last-child {
                    margin-right: -15px;
                }

                a {
                    @include font-size(1.3rem);
                    padding: 30px 15px;
                    line-height: 1;
                    color: #fff;

                }
            }
        }
    }
}

// Reveal the menu
.menu-open {
    overflow: hidden;

    .main-nav {
        transform: translate3d(0, 0, 0);

        .main-menu {
            overflow-y: scroll;
            overflow-x: hidden;
            height: calc(100vh - 54px);
        }
    }
}

.submenu {
    position: absolute;
    background: $darkerAqua;
    width: 200px;
    //display:none;
    opacity: 0;
    transition: opacity 1s linear;
    top: 55px;
    z-index: 99;
}

.main-menu li:hover > .submenu {
    //display:block;
    opacity: 1;
}

.main-nav .submenu li a {
    padding: 0;
}

